# ocppi

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: checks.yaml
cmake/: CPM.cmake  GetSemverFromGit.cmake  PFL.cmake
cmake.fix/: nlohmann_json_compile_test.cpp
debian/: changelog  control  libocppi-dev.install
examples/parse-config/: CMakeLists.txt
examples/parse-config/src/: main.cpp
examples/use-default-logger/: CMakeLists.txt
examples/use-default-logger/src/: main.cpp
examples/using-crun/: CMakeLists.txt
examples/using-crun/src/: main.cpp
examples/with-logger/: CMakeLists.txt
examples/with-logger/src/: main.cpp
include/ocppi/: InvalidArgumentError.hpp  version.hpp.in
include/ocppi/cli/: CommonCLI.hpp  ExecutableNotFoundError.hpp
include/ocppi/cli/crun/: Crun.hpp
include/ocppi/cli/runc/: Runc.hpp
include/ocppi/cli/youki/: Youki.hpp
include/ocppi/runtime/config/: AmbitiousProperties.hpp  Anet.hpp  AnetItems.hpp  Apparmor.hpp  ApparmorProperties.hpp  ArrayOfGIDsType.hpp  ArrayOfGiDs.hpp  ArrayOfStrings.hpp  BlockIO.hpp  BlockIODevice.hpp  BlockIODeviceProperties.hpp  BlockIODeviceThrottle.hpp  BlockIODeviceThrottleAllOf.hpp  BlockIODeviceWeight.hpp  BlockIODeviceWeightAllOf.hpp  BlockIOProperties.hpp  CapabilitiesProperties.hpp  CappedCPU.hpp  CappedCPUProperties.hpp  CappedMemory.hpp  CappedMemoryProperties.hpp  Cgroup.hpp  CgroupProperties.hpp  ConsoleSize.hpp  ConsoleSizeProperties.hpp  Env.hpp  (+115 more)
misc/cmake/: ocppi-config.cmake.in
src/ocppi/: version.cpp
src/ocppi/cli/: CommonCLI.cpp  Process.cpp
tools/codegen/: codegen.sh
(+3 files in other folders)
